# Snayai

./: .gitignore  CMakeLists.txt  build.bat  makefile  snake_ai.pt  test.txt  training_data.txt
headers/: ai.hpp  const.hpp  grid.hpp  snake.hpp  snayai.hpp  utils.hpp
include/: const.hpp  controller.hpp  grid.hpp  net.hpp  snake.hpp  snayai.hpp  utils.hpp
scripts/: run.bat  update.bat
src/: ai.cpp  grid.cpp  main.cpp  net.cpp  player.cpp  snake.cpp  utils.cpp
